--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "eslint": "^8.40.0"
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8"
   }
 }
