--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "project-novo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "autoprefixer": "10.4.14",
-    "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
-  },
-  "devDependencies": {
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8"
-  }
+	"name": "project-novo",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"check": "prettier --check .",
+		"format": "prettier --write .",
+		"eslint": "eslint --ext js --ext jsx .",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"@next/font": "13.4.1",
+		"next": "13.4.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.8.0"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.14",
+		"eslint": "^8.40.0",
+		"eslint-config-google": "^0.14.0",
+		"eslint-config-next": "^13.4.1",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-react": "^7.32.2",
+		"husky": "^8.0.0",
+		"postcss": "^8.4.23",
+		"prettier": "^2.8.8",
+		"tailwindcss": "^3.3.2"
+	}
 }
