--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 	},
 	"dependencies": {
 		"@next/font": "13.4.1",
+		"bootstrap": "^5.2.3",
 		"next": "13.4.1",
 		"react": "18.2.0",
+		"react-bootstrap": "^2.7.4",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0"
 	},
