--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"mongodb": "^5.5.0",
 		"mongoose": "^7.1.1",
 		"next": "13.4.1",
+		"next-auth": "^4.22.1",
 		"react": "18.2.0",
 		"react-bootstrap": "^2.7.4",
 		"react-dom": "18.2.0",
