--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@next/font": "13.4.1",
+		"bcryptjs": "^2.4.3",
 		"bootstrap": "^5.2.3",
 		"mongodb": "^5.5.0",
 		"mongoose": "^7.1.1",
