--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@next-auth/mongodb-adapter": "^1.1.3",
 		"@next/font": "13.4.1",
 		"bcryptjs": "^2.4.3",
 		"bootstrap": "^5.2.3",
