--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@next/font": "13.4.1",
 		"bcryptjs": "^2.4.3",
 		"bootstrap": "^5.2.3",
+		"flat-color-icons": "^1.1.0",
 		"mongodb": "^5.5.0",
 		"mongoose": "^7.1.1",
 		"next": "13.4.1",
