--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@next-auth/mongodb-adapter": "^1.1.3",
 		"@next/font": "13.4.1",
+		"axios": "^1.4.0",
 		"bcryptjs": "^2.4.3",
 		"bootstrap": "^5.2.3",
 		"flat-color-icons": "^1.1.0",
