--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"axios": "^1.4.0",
 		"bcryptjs": "^2.4.3",
 		"bootstrap": "^5.2.3",
+		"date-fns": "^2.30.0",
 		"flat-color-icons": "^1.1.0",
 		"mongodb": "^5.5.0",
 		"mongoose": "^7.1.1",
