--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react-bootstrap": "^2.7.4",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
+		"react-scroll-to-bottom": "^4.2.0",
 		"socket.io-client": "^4.6.2"
 	},
 	"devDependencies": {
